# conductor-discord

./: .gitignore  Dockerfile.base  pyproject.toml  requirements.txt  run_discord_bot.py
.github/workflows/: build-and-push.yml
conductor_discord/: bot.py  models.py  settings.py  utils.py
tests/: test_utils.py
tests/casettes/: test_marketing_crew.yaml
