[tool.poetry]
name = "conductor-discord"
version = "0.1.6"
description = "Discord bot for Conductor Server"
authors = ["csmizzle <chrissmith700@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pydantic = "^2.7.1"
boto3 = "^1.34.108"
pydantic-settings = "^2.2.1"
py-cord = "^2.5.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
vcrpy = "^6.0.1"
pytest = "^8.2.1"


[tool.poetry.group.pytest.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
